--- a/client/budget-app/src/App.css
+++ b/client/budget-app/src/App.css
@@ -11,6 +11,9 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+.link-primary {
+  cursor: pointer;
+}
 
 .App-header {
   background-color: #282c34;
